--- a/viz/tony.html
+++ b/viz/tony.html
@@ -10,11 +10,14 @@
     <body>
         <script src="../vendor/d3/d3.js"></script>
         <script>
-const margin = {top: 100, right: 100, bottom: 150, left: 100};
+
+//main
+const margin = {top: 100, right: 50, bottom: 150, left: 25};
 const width = 800 - margin.left - margin.right;
 const height = 500 - margin.top - margin.bottom;
 
 const svg = d3.select("body").append("svg")
+	.attr("id", "main")
     .attr("width", String(width + margin.left + margin.right))
     .attr("height", String(height + margin.top + margin.bottom))
     .append("g")
@@ -31,7 +34,7 @@ const getColour = (() => {
 })();
 
 // type = "year" or "country"
-const type = "year";
+const type = "country";
 
 if (type === "country") {
     // Loads list of countries
@@ -52,7 +55,7 @@ if (type === "country") {
                
                 // Combines and filters data to the most recent year
                 const latestData = data2.filter(d => d.year === data2[0].year);
-                latestData.forEach((d) => {d.country = i;});
+                latestData.forEach((d) => {d.country = i; d.code = countries[i].code;});
                 totalData = totalData.concat(latestData);
 
                 ++counter;
@@ -88,6 +91,8 @@ if (type === "country") {
 
                     // Creates bars
                     svg.selectAll(".bar")
+						.append("div")
+						.attr("id", (d) => String(d.country))
                         .data(totalData)
                         .enter()
                         .append("rect")
@@ -96,8 +101,63 @@ if (type === "country") {
                             .attr("y", (d) => String((1 - d.high) * height))
                             .attr("width", x.bandwidth())
                             .attr("height", (d) => String(d.width * height + 1))
-                            .attr("fill", (d) => getColour(d.share, d.width));
-                }
+                            .attr("fill", (d) => getColour(d.share, d.width))
+
+						.on("click", function(d) {
+							// Compute year viz on-the-fly
+							
+							d3.tsv(`../data/income/${d.code}.tsv`, (error, data3) => {
+								if(error) return;
+
+								d3.select("#sub").remove();
+
+								svg_sub = d3.select("body").append("svg")
+									.attr("id", "sub")
+									.attr("width", String(width + margin.left + margin.right))
+									.attr("height", String(height + margin.top + margin.bottom))
+									.append("g")
+									.attr("transform", `translate(${margin.left},${margin.top})`);
+
+								data3.sort((a,b) => (a.year > b.year) ? 1 : 0);
+
+								// Creates axes
+								const x = d3.scaleBand()
+									.range([0, width])
+									.padding(0.1)
+									.domain(data3.map(d => d.year));
+								const y = d3.scaleLinear()
+									.range([height, 0]);
+								const xAxis = d3.axisBottom(x);
+
+								svg_sub.append("g")
+									.attr("transform", `translate(0, ${height})`)
+									.call(xAxis)
+									.selectAll("text")
+									.attr("font-family", "sans-serif")
+									.attr("font-size", "8px")
+									.style("text-anchor", "end")
+									.attr("dx", "-.8em")
+									.attr("dy", ".15em")
+									.attr("transform", (d) => "rotate(-65)");
+
+								svg_sub.append("g")
+									.attr("class", "y axis")
+									.call(d3.axisLeft(y));
+
+								// Creates bars
+								svg_sub.selectAll(".bar")
+									.data(data3)
+									.enter()
+									.append("rect")
+									.attr("class", "bar")
+									.attr("x", (d) => String(x(d.year)))
+									.attr("y", (d) => String((1 - d.high) * height))
+									.attr("width", x.bandwidth())
+									.attr("height", (d) => String(d.width * height + 1))
+									.attr("fill", d => getColour(d.share, d.width));
+							});
+						});
+				}
             });
         }
     });
