--- a/viz/graph.html
+++ b/viz/graph.html
@@ -13,25 +13,42 @@
 		<script src="../vendor/d3/d3.js"></script>
 		<script>
 
+// getColour converts a row in the dataset to a colour
+function getColour(i) {
+	if(i<17){
+		const color = ["black", "purple", "red", "yellowgreen", "grey", "darkgreen", "pink", "hotpink", "salmon", "mediumvioletred", "brown", "grey1", "darkorange", "deeppink", "chocolate", "chartreuse", "maroon"];
+		return color[i];
+	}else{
+		const gradient = d3.scaleLinear().domain([17, 40])
+			.range(["yellow", "blue"]);
+			//.range(["#FFFFFF", "#000000"]);
+			//.range(["#aeb01e", "#1e25b0"]);
+		return gradient(i);
+	}
+	
+};
+
+// Define margin
 const margin = {top: 50, right: 100, bottom: 50, left: 50};
 const width = 800 - margin.left - margin.right;
 const height = 500 - margin.top - margin.bottom;
-const text_size = 10;
+const text_size = 8;
 
+// create graph zone
 var svg = d3.select("body").append("svg")
     .attr("width", String(width + margin.left + margin.right))
     .attr("height", String(height + margin.top + margin.bottom))
 	.append("g")
     .attr("transform", `translate(${margin.left},${margin.top})`);
 
-// getColour converts a row in the dataset to a colour
-function getColour(i) {
-	const gradient = d3.scaleLinear().domain([1, 40])
-		.range(["yellow", "blue"]);
-		//.range(["#FFFFFF", "#000000"]);
-		//.range(["#aeb01e", "#1e25b0"]);
-	return gradient(i);
-};
+// create legend zone
+var svg_legend = d3.select("body").append("svg")
+    .attr("width", String(width + margin.left + margin.right))
+    .attr("height", String(height + margin.top + margin.bottom))
+	.append("g")
+    .attr("transform", `translate(${margin.left},${margin.top})`);
+
+
 
 // Loads list of countries
 d3.tsv("../data/countries.tsv", function(error, data){
@@ -44,26 +61,29 @@ d3.tsv("../data/countries.tsv", function(error, data){
 		if(error) return;
 		const income = data2;
 
-		// Create axes
+	// Create axes of graph
 			// axis x
-		var scale_x = d3.scaleLinear()
+	var scale_x = d3.scaleLinear()
 			.range([0, width])
 			.domain([1905,2020]);
-		var xAxis = d3.axisBottom(scale_x);
+	var xAxis = d3.axisBottom(scale_x);
 			// axis y
-		var scale_y = d3.scaleLinear()
-			.range([height, 0])
-			.domain([0,0.9]);
-		var yAxis = d3.axisLeft(scale_y);
+	var scale_y = d3.scaleLinear()
+		.range([height, 0])
+		.domain([0,0.9]);
+	var yAxis = d3.axisLeft(scale_y);
 
-		//Draw axes
-		svg.append("g")
-			.attr('class', 'x axis')
-			.attr("transform", `translate(0, ${height})`)
-			.call(xAxis);
-		svg.append("g")
-			.attr("class", "y axis")
-			.call(yAxis);
+
+	//Draw axes
+	svg.append("g")
+		.attr('class', 'x axis')
+		.attr("transform", `translate(0, ${height})`)
+		.call(xAxis);
+	svg.append("g")
+		.attr("class", "y axis")
+		.call(yAxis);
+	
+
         // Add the text label for the X axis
         svg.append('text')
             .attr('x', width / 2)
@@ -78,56 +98,63 @@ d3.tsv("../data/countries.tsv", function(error, data){
             .attr('dy', '1em')
             .style('text-anchor', 'middle')
             .text('GINI index');
-/*			// add x axis label:
-		svg.append("text")
-			.attr("text-anchor", "end")
-			.attr("font-size", text_size)
-			.attr("x", width)
-			.attr("y", height + margin.bottom-text_size)
-			.text("Years");
-			// add y axis label:
-		svg.append("text")
-			.attr("text-anchor", "end")
-			.attr("font-size", text_size)
-			.attr("y", -margin.top + text_size)
-			.text("GINI index");
-*/
 
-		//Draw dots
-		var count=0;
-		for (let i = 0; i < countries.length; ++i) {
-			current=countries[i].code;
-			country_data=income.filter(function(d){return current==d.country;});
-			if(country_data.length>=1){
-				country_name=countries[i].name;
-				var dots = svg.selectAll("dot")
-       	        			.data(country_data)
+
+	//Draw dots
+	var count=0;
+	var placement=0;
+	for (let i = 0; i < countries.length; ++i) {
+		current=countries[i].code;
+		country_data=income.filter(function(d){return current==d.country;});
+		if(country_data.length>=1){
+			country_name=countries[i].name;
+			var dots = svg.selectAll("dot")
+       	        		.data(country_data)
+		       		.enter()
+				.append("svg:circle")
+        	       		.attr("cx", function(d) { return scale_x(d.year); })
+         	      		.attr("cy", function(d) { return scale_y(d.gini_index); })
+        	       		.attr("r", "2.8px")
+				.attr("fill", getColour(count))
+				.append("svg:title").text(function(d){
+				return country_name +" , "+d.year+" , "+d.gini_index+" , "+count;});
+			
+			// Add the path
+			for (let i = 0; i < country_data.length-1; ++i) {
+				var p1=country_data[i];
+				var p2=country_data[i+1];
+				svg.selectAll(".line")
+					.data(country_data)
 		       			.enter()
-					.append("svg:circle")
-        	       			.attr("cx", function(d) { return scale_x(d.year); })
-         	      			.attr("cy", function(d) { return scale_y(d.gini_index); })
-        	       			.attr("r", "2.8px")
-					.attr("fill", getColour(count))
-					.append("svg:title").text(function(d){
-					return country_name +" , "+d.year+" , "+d.gini_index+" , "+count;});
-
-				// Add the path
-				for (let i = 0; i < country_data.length-1; ++i) {
-					var p1=country_data[i];
-					var p2=country_data[i+1];
-					svg.selectAll(".line")
-						.data(country_data)
-		       				.enter()
-                				.append("line")
-                				.attr("x1", function(d){return scale_x(p1.year)})
-                				.attr("y1", function(d){return scale_y(p1.gini_index)})
-                				.attr("x2", function(d){return scale_x(p2.year)})
-                				.attr("y2", function(d){return scale_y(p2.gini_index)})
-                				.style("stroke", getColour(count));
-				}
-				count++;
+                			.append("line")
+                			.attr("x1", function(d){return scale_x(p1.year)})
+                			.attr("y1", function(d){return scale_y(p1.gini_index)})
+                			.attr("x2", function(d){return scale_x(p2.year)})
+                			.attr("y2", function(d){return scale_y(p2.gini_index)})
+                			.style("stroke", getColour(count));
 			}
+			// Add legend
+			
+			svg_legend.selectAll("dot")
+       	        		.data(country_data)
+		       		.enter()
+				.append("svg:circle")
+        	       		.attr("cx", function(d){if(count>19){return 200}else{return 0}})
+         	      		.attr("cy", function(d){return placement})
+        	       		.attr("r", "2.8px")
+				.attr("fill", getColour(count))
+			svg_legend.append("text")
+				.attr('y', function(d){return placement+(text_size/2)})
+            			.attr('x', function(d){if(count>19){return 205}else{return 5}})
+				.text(function(d){return country_name;});
+			if(count!=19){
+				placement=placement+text_size*2+2;
+			}else{
+				placement=0;
+			}
+			count++;
 		}
+	}//end for
 	});//end loads income data
 
 });//end loads list of countries
