income-comp: increase path width on mouseover

--- a/viz/income-comp.html
+++ b/viz/income-comp.html
@@ -180,14 +180,26 @@ function updateGraph() {
     		.attr("d", ts)
     		.attr("stroke", LO_COLOR)
     		.attr("stroke-width", 2)
-    		.attr("fill", "none");
+    		.attr("fill", "none")
+			.on('mouseover', function() {
+				d3.select(this)
+					.attr("stroke-width", 4);})
+			.on('mouseout', function() {
+				d3.select(this)
+					.attr("stroke-width", 2);});
 
     	var hi_income = svg.append("path").datum(hi_data)
             .attr('id', 'hiIncomePath')
     		.attr("d", ts)
     		.attr("stroke", HI_COLOR)
     		.attr("stroke-width", 2)
-    		.attr("fill", "none");
+    		.attr("fill", "none")
+			.on('mouseover', function() {
+				d3.select(this)
+					.attr("stroke-width", 4);})
+			.on('mouseout', function() {
+				d3.select(this)
+					.attr("stroke-width", 2);});
 
         [0.0, 0.25, 0.5, 0.75].forEach(d =>
             svg.append("line")
