--- a/viz/Graph_continent.html
+++ b/viz/Graph_continent.html
@@ -171,15 +171,28 @@ function updateGraph(low_year, high_year) {
 			country_data=country_data.filter(function(d){return d.year >= low_year && d.year <= high_year;});
 			country_name=countries[i].name;
 			var dots = svg.selectAll("dot")
-       	        		.data(country_data)
-		       		.enter()
+				.data(country_data)
+				.enter()
 				.append("svg:circle")
-        	       		.attr("cx", function(d) { return scale_x(d.year); })
-         	      		.attr("cy", function(d) { return scale_y(d.gini_index); })
-        	       		.attr("r", "2.8px")
+				.attr("class", function(d) {return String(d.country);})
+				.attr("cx", function(d) { return scale_x(d.year); })
+				.attr("cy", function(d) { return scale_y(d.gini_index); })
+				.attr("r", "2.8px")
+				.attr("opacity", "0.6")
 				.attr("fill", assignColour(current))
+				.on('mouseover', function(d) {
+					d3.selectAll("." + d.country)
+						.attr("opacity", "1")
+						.attr("stroke-opacity", "1")
+						.raise();
+				})
+				.on('mouseout', function(d) {
+					d3.selectAll("." + d.country)
+						.attr("opacity", "0.6")
+						.lower();
+				})
 				.append("svg:title").text(function(d){
-				return country_name +" , "+d.year+" , "+d.gini_index+" , "+count;});
+					return country_name +" , "+d.year+" , "+d.gini_index+" , "+count;});
 
 			// Add the path
 			for (let i = 0; i < country_data.length-1; ++i) {
@@ -187,13 +200,26 @@ function updateGraph(low_year, high_year) {
 				var p2=country_data[i+1];
 				svg.selectAll(".line")
 					.data(country_data)
-		       			.enter()
-                			.append("line")
-                			.attr("x1", function(d){return scale_x(p1.year)})
-                			.attr("y1", function(d){return scale_y(p1.gini_index)})
-                			.attr("x2", function(d){return scale_x(p2.year)})
-                			.attr("y2", function(d){return scale_y(p2.gini_index)})
-                			.style("stroke", assignColour(current));
+					.enter()
+					.append("line")
+					.attr("class", function(d) {return String(d.country);})
+					.attr("x1", function(d){return scale_x(p1.year)})
+					.attr("y1", function(d){return scale_y(p1.gini_index)})
+					.attr("x2", function(d){return scale_x(p2.year)})
+					.attr("y2", function(d){return scale_y(p2.gini_index)})
+					.attr("opacity", "0.6")
+					.style("stroke", assignColour(current))
+					.on('mouseover', function(d) {
+						d3.selectAll("." + d.country)
+							.attr("opacity", "1")
+							.attr("stroke-opacity", "1")
+							.raise();
+					})
+					.on('mouseout', function(d) {
+						d3.selectAll("." + d.country)
+							.attr("opacity", "0.6")
+							.lower();
+					});
 			}
 
 			// Add legend
